--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Inter, sans-serif;
     background-color: #f5f5f5;
     color: #333;
     margin: 0;
@@ -12,7 +12,7 @@ header{
 }
 
 #profile-img{
-    width: 150px;
+    width: 200px;
     border-radius: 50%;
 }
 
@@ -25,4 +25,5 @@ button{
 body.dark{
     background-color: #121212;
     color: #f5f5f5;
+
 }
